# ongeul

./: .gitignore  Cargo.toml  README.md  cliff.toml  index.html  project.yml
.github/: FUNDING.yml
.github/workflows/: ci.yml  docs.yml  release.yml
0.2.0/: index.html  print.html  searchindex.js  searchindex.json
0.2.0/dev/: architecture.html  building.html  contributing.html  packaging.html
0.2.1/: 404.html  index.html  license.html  searchindex.js  searchindex.json
0.2.1/theme/: version-selector.css  version-selector.js
0.2.1/user/: getting-started.html  installation.html  preferences.html
0.3.0/: index.html  print.html  searchindex.js  searchindex.json
OngeulTests/: FocusStealCorrectorTests.swift  FocusStealDoubles.swift  FocusStealTests.swift  HandleKeyDownRouterTests.swift  HangulEngineTests.swift  IMKServerPoCTests.swift  InputControllerIntegrationTests.swift  KeyLabelConverterTests.swift  OngeulTests-Bridging-Header.h  PerAppModeStoreTests.swift  ToggleDetectorTests.swift
design/: 32-hid-capslock-press-duration.md
dev/: 404.html  index.html  license.html  print.html  searchindex.js  searchindex.json
docs/: book.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: load_layout.rs  mixed_ops.rs  process_key.rs
ongeul-automata/: Cargo.toml  uniffi.toml
ongeul-automata/layouts/: 2-standard.json5  3-390.json5  3-final.json5
ongeul-automata/src/: lib.rs  unicode.rs
ongeul-automata/src/automata/: jamo.rs  jaso.rs  mod.rs
ongeul-automata/src/layout/: mod.rs  schema.rs
ongeul-automata/tests/: integration_3bul_test.rs  integration_test.rs  prop_test.rs
ongeul-update/: Cargo.toml
rshangul/: Cargo.toml  uniffi.toml
rshangul/layouts/: 2-standard.json5  3-390.json5  3-final.json5
rshangul/src/: engine.rs  lib.rs  unicode.rs
rshangul/src/automata/: jamo.rs  jaso.rs
rshangul/src/layout/: mod.rs  schema.rs
rshangul/tests/: integration_3bul_test.rs  integration_test.rs
scripts/: build.sh  gen_app_icon.swift  gen_icon.swift  gen_layout_svg.py  install.sh  package.sh
test-e2e/: README.md  run_e2e.swift
(+103 files in other folders)
