[package]
name = "ongeul-automata-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.ongeul-automata]
path = "../ongeul-automata"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "process_key"
path = "fuzz_targets/process_key.rs"
doc = false

[[bin]]
name = "load_layout"
path = "fuzz_targets/load_layout.rs"
doc = false

[[bin]]
name = "mixed_ops"
path = "fuzz_targets/mixed_ops.rs"
doc = false
