[package]
name = "ongeul-automata"
version = "0.2.0"
edition = "2024"
description = "Korean Hangul composition engine for Input Method Editors"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
uniffi = { version = "0.31", features = ["cli"] }
serde = { version = "1", features = ["derive"] }
json5 = "0.4"
thiserror = "2"

[dev-dependencies]
proptest = "1"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }
