[package]
name = "ongeul-automata"
version = "0.2.0"
edition = "2024"
description = "Korean Hangul composition engine for Input Method Editors"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
uniffi.workspace = true
serde.workspace = true
json5.workspace = true
thiserror = "2"

[dev-dependencies]
proptest = "1"
