[package]
name = "rshangul"
version = "0.1.0"
edition = "2024"
description = "Korean Hangul composition engine for Input Method Editors"
license = "Apache-2.0"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
uniffi = { version = "0.29", features = ["cli"] }
serde = { version = "1", features = ["derive"] }
json5 = "0.4"

[build-dependencies]
uniffi = { version = "0.29", features = ["build"] }
